--- a/pages/portfolio.module.css
+++ b/pages/portfolio.module.css
@@ -8,7 +8,7 @@
 }
 
 .subheading {
-  margin: var(--spacing-lg) auto var(--spacing-sm);
+  margin: var(--spacing-2xl) auto var(--spacing-sm);
   text-align: center;
 }
 
