--- a/src/components/ResumeJobsInfo/ResumeJobsInfo.module.css
+++ b/src/components/ResumeJobsInfo/ResumeJobsInfo.module.css
@@ -1,4 +1,4 @@
-.resumeSection {
+.resume-section {
   width: 100%;
 }
 
@@ -6,37 +6,12 @@
   display: flex;
   flex-direction: column;
   gap: 0;
-}
-
-.additional-heading {
-  margin: 40px 0 10px;
-}
-
-.additional-jobs {
-  margin: 0;
-  padding-left: 0;
-}
-
-.additional-job {
-  display: block;
-  margin-top: 3px;
+  padding-bottom: var(--spacing-sm);
 }
 
 @media (min-width: 875px) {
-  .additional-job {
-    display: flex;
-  }
-}
-
-.additional-job-title {
-  margin: 0;
-  font-size: 16px;
-  text-transform: none;
-}
-
-@media (min-width: 875px) {
-  .additional-job-title:not(:first-child) {
-    margin-top: 0;
+  .accordion {
+    padding-bottom: var(--spacing-lg);
   }
 }
 
